examples/test/testpolicy16756.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16756
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key5: value35
      key13: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value48
          key49: value30
      podSelector:
        matchLabels:
          key39: value17
